# multimedia-management-components

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: build-dev.yml  build-qa.yml  build-release.yml  build-reusable.yml  checks.yml
api/: multimedia.proto  openapi.json
connectors/: Cargo.toml
connectors/src/: aws_s3_connector.rs  azure_blob_connector.rs  blob_storage_connector.rs
crates/application/: Cargo.toml
crates/application/src/: mm_service.rs  mm_service_trait.rs
crates/azure-cli/: Cargo.toml
crates/azure-cli/src/: main.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: aws_s3_connector.rs  lib.rs
crates/data-access/: Cargo.toml
crates/data-access/migrations/2026-03-14-112648-0000_create_tables/: up.sql
crates/data-access/src/: db_models.rs  lib.rs  psql_data_access.rs
crates/domain/: Cargo.toml
crates/domain/src/: blob_storage_connector.rs  lib.rs  repositories.rs
crates/grpc-api/: Cargo.toml
crates/grpc-api/src/: main.rs
crates/grpc-handlers/: Cargo.toml  build.rs
crates/grpc-handlers/src/: v1.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: v1.rs
crates/infrastructure/blob-storage-connector/: Cargo.toml
crates/infrastructure/blob-storage-connector/src/: aws_s3_connector.rs  azure_blob_connector.rs  lib.rs
crates/infrastructure/persistence/: Cargo.toml
crates/infrastructure/persistence/migrations/2026-03-14-112648-0000_create_tables/: down.sql  up.sql
crates/infrastructure/persistence/src/: db_models.rs  lib.rs  psql_repository.rs
crates/models/: Cargo.toml
crates/models/src/: container_meta.rs  tracks.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: mp4_parser.rs
crates/rest-api/: Cargo.toml
crates/rest-api/src/: main.rs
crates/rest-handlers/: Cargo.toml
crates/rest-handlers/src/: lib.rs  v1.rs
crates/s3-cli/: Cargo.toml
crates/s3-cli/src/: main.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs  mm_service.rs  mm_service_trait.rs
data-access/: Cargo.toml
data-access/migrations/2026-03-14-112648-0000_create_tables/: down.sql  up.sql
data-access/src/: db_models.rs  psql_data_access.rs  schema.rs
docs/: api-standards.md  coding-guidelines.md  db-migrations.md  release.md
handlers/: Cargo.toml
handlers/src/: v1.rs
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile
infra/docker/grpc-api/: .dockerignore  Dockerfile
infra/docker/rest-api/: Dockerfile
models/: Cargo.toml
models/src/: container_meta.rs  lib.rs  tracks.rs
parsers/: Cargo.toml
parsers/src/: lib.rs  mp4_parser.rs
scripts/: generate.sh  sonar.sh  test_grpc_api.sh  test_rest_api.sh
services/: Cargo.toml
services/src/: mm_service.rs
