[workspace]
members = [
    "crates/models",
    "crates/parsers",
    "crates/connectors",
    "crates/data-access",
    "crates/services",
    "crates/handlers",
    "crates/rest-api",
    "crates/s3-cli",
    "crates/azure-cli", 
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MGTheTrain/multimedia-management-components"

[workspace.lints.clippy]
redundant_closure = "warn"

[workspace.lints.rust]
unused-must-use = "warn"

[workspace.dependencies]
# internal
models = { path = "crates/models" }
parsers = { path = "crates/parsers" }
connectors = { path = "crates/connectors" }
data_access = { path = "crates/data-access" }
services = { path = "crates/services" }
handlers = { path = "crates/handlers" }

# external
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
aws-config = "1"
aws-sdk-s3 = "1"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
