[workspace]
members = [
    "crates/domain",
    "crates/parsers",
    "crates/infrastructure/blob-storage-connector",
    "crates/infrastructure/persistence",
    "crates/application",
    "crates/rest-handlers/generated/rest-server",
    "crates/rest-handlers",
    "crates/rest-api",
    "crates/s3-cli",
    "crates/azure-cli",
    "crates/grpc-handlers",
    "crates/grpc-api",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MGTheTrain/multimedia-management-components"

[workspace.lints.clippy]
redundant_closure = "warn"

[workspace.lints.rust]
unused-must-use = "warn"

[workspace.dependencies]
# internal
domain = { path = "crates/domain" }
parsers = { path = "crates/parsers" }
blob-storage-connector = { path = "crates/infrastructure/blob-storage-connector" }
persistence = { path = "crates/infrastructure/persistence" }
application = { path = "crates/application" }
openapi = { path = "crates/rest-handlers/generated/rest-server" }
rest-handlers = { path = "crates/rest-handlers" }
grpc-handlers = { path = "crates/grpc-handlers" }

# external
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
aws-config = "1"
aws-sdk-s3 = "1"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
