[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
    
[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3.7", features = ["postgres", "chrono", "uuid", "r2d2"] }
r2d2 = "0.8.10"
diesel_migrations = "2.3.1"
bb8 = "0.9.1"
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] } 
uuid = { version = "1.22.0", features = [ "v4"]}
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"  
env_logger = "0.11.9"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
models = { path = "../models" }
