[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = { path = "../services" }
connectors = { path = "../connectors" }
data_access = { path = "../data-access" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde_json = "1"

[dev-dependencies]
axum-test = "19"
tokio = { version = "1", features = ["full"] }
