[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }