[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connectors = { path = "../connectors" }
parsers = { path = "../parsers" }
data_access = { path = "../data-access" }
models = { path = "../models" }
uuid = { version = "1.22.0", features = [ "v4"]}
chrono = "0.4"
bytes = "1.11"
dotenv = "0.15.0"
log = "0.4.29"
env_logger = "0.11.9"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"