[package]
name = "application"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
parsers.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
blob-storage-connector.workspace = true
persistence.workspace = true