[package]
name = "azure-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "azure-cli"
path = "src/main.rs"

[dependencies]
connectors.workspace = true
clap.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true