[package]
name = "connectors"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
azure_storage.workspace = true
azure_storage_blobs.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile = "3"