[package]
name = "grpc-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "grpc-api"
path = "src/main.rs"

[dependencies]
application.workspace = true
blob-storage-connector.workspace = true
persistence.workspace = true
grpc-handlers.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
tonic.workspace = true
