[package]
name = "s3-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "s3-cli"
path = "src/main.rs"

[dependencies]
domain.workspace = true
blob-storage-connector.workspace = true
clap.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
