[package]
name = "services"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
connectors.workspace = true
parsers.workspace = true
data_access.workspace = true
models.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
env_logger.workspace = true
connectors.workspace = true
data_access.workspace = true