[package]
name = "persistence"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
domain.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
validator.workspace = true
diesel = { version = "2.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.3"
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
bb8 = "0.9"

[dev-dependencies]
env_logger.workspace = true